# wfm_cli

./: Cargo.toml  README.md
.github/workflows/: build.yml
cli/: Cargo.toml  README.md
cli/src/: cheap_rivens.rs  config.rs  main.rs  ocr.rs  util.rs
ducatsniper/: Cargo.toml
ducatsniper/src/: main.rs
wfm_egui/: Cargo.toml
wfm_egui/src/: app.rs  main.rs  texture.rs  util.rs  worker.rs
wfm_egui/src/apps/: authenticate.rs  error_popup.rs  inventory.rs  item_details.rs  mod.rs  spinner_popup.rs  test.rs  top_menu.rs
wfm_egui/src/apps/ledger/: load_job.rs  mod.rs
wfm_egui/src/apps/market/: ducatsniper.rs  item_search.rs  live_view.rs  mod.rs  orders.rs  place_order.rs
wfm_egui/src/background_jobs/: item_orders.rs  mod.rs  websocket_listener.rs  wfm_manifest.rs  wfm_profile_orders.rs
wfm_rs/: Cargo.toml  README.md
wfm_rs/src/: lib.rs  model.rs  request.rs  response.rs  shared.rs  traits.rs  websocket.rs
