[package]
name = "wfm_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.16.0", features = ["persistence"] }
wfm_rs = { path = "../wfm_rs" }
anyhow = "1.0.53"
parking_lot = "0.12.0"
crossbeam-channel = "0.5.2"
pretty_env_logger = "0.4.0"
log = "0.4.14"
tokio = { version = "1.16.1", features = ["rt"] }
ahash = "0.7.6"
image = "0.24.0"
reqwest = "0.11.9"
pollster = "0.2.5"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
levenshtein = "1.0.5"
atomic_float = "0.1.0"

[dependencies.eguikit]
git = "https://github.com/zeskeertwee/eguikit"
rev = "669011cae0eb50f574a473ba27f1841e169bfa8d"